--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -22,19 +22,19 @@
   margin-left: 2.4rem;
 }
 
-.teacher-item header div strong {
+.teacher-item header strong {
   font: 700 2.4rem Archivo;
   display: block;
   color: var(--color-text-title);
 }
 
-.teacher-item header div span {
+.teacher-item header span {
   font-size: 1.6rem;
   display: block;
   margin-top: 0.4rem;
 }
 
-.teacher-item>p {
+.teacher-item > p {
   padding: 0 2rem;
   font-size: 1.6rem;
   line-height: 2.8rem;
@@ -44,6 +44,7 @@
   padding: 3.2rem 2rem;
   background: var(--color-box-footer);
   border-top: 1px solid var(--color-line-in-white);
+  margin-top: 3.2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -55,7 +56,7 @@
   display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
   width: 20rem;
   height: 5.6rem;
   background: var(--color-secundary);
@@ -70,18 +71,17 @@
   transition: 0.2s;
 }
 
-.teacher-item footer button {
+.teacher-item footer a:hover {
   background: var(--color-secundary-dark);
 }
 
 @media (min-width: 700px) {
-
   .teacher-item header,
   .teacher-item footer {
     padding: 3.2rem;
   }
 
-  .teacher-item>p {
+  .teacher-item > p {
     padding: 0 3.2rem;
   }
 
@@ -90,13 +90,13 @@
     margin-left: 1.6rem;
   }
 
-  .teacher-item footer button {
+  .teacher-item footer a {
     width: 24.5rem;
     font-size: 1.6rem;
     justify-content: center;
   }
 
-  .teacher-item footer button img {
+  .teacher-item footer a img {
     margin-right: 1.6rem;
   }
 }
